package ar.edu.utn.frba.dds.quemepongo;

import lombok.AllArgsConstructor;

@AllArgsConstructor
public class Tela {
  private String nombre;
}
