package ar.edu.utn.frba.dds.quemepongo.model.prenda;

public enum Categoria {
  CALZADO,
  PARTE_SUPERIOR,
  PARTE_INFERIOR,
  ACCESORIO
}
