@startuml iteracion-1

class Prenda {
  Prenda(tipo, tela, colorPrincipal)
}

Prenda "tipo" -left-> Tipo
Prenda "tela" --> Tela
Prenda "colorSecundario\n(opcional)" -right-> Color
Prenda "colorPrincipal" -right-> Color

class Tela {
  nombre
}

class Color {
}

class Tipo {
  nombre
}

Tipo "categoria" --> Categoria

enum Categoria {
  CALZADO
  PARTE_SUPERIOR,
  PARTE_INFERIOR,
  ACCESORIO
}

@enduml
